alignment corrections

--- a/src/app/Components/Home.css
+++ b/src/app/Components/Home.css
@@ -1118,7 +1118,7 @@ h1 {
   rotate: 6deg;
 }
 
-.benefits-tag {
+.benefitss-tag {
   display: block;
   color: #c46b2b;
   font-size: 12px;
